force-app/main/default/objects/Account/fields/CC_Information__c.field-meta.xml
<CustomField>
    <fullName>CC_Information__c</fullName>
    <label>CC Information</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>