force-app/main/default/objects/Account/fields/Location_Pointer__c.field-meta.xml
<CustomField>
    <fullName>Location_Pointer__c</fullName>
    <label>Location Pointer</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>