force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>British Columbia</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Manitoba</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
            <value>
                <fullName>Bavaria</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Hesse</fullName>
            </value>
            <value>
                <fullName>Saxony</fullName>
            </value>
            <value>
                <fullName>Baden-Württemberg</fullName>
            </value>
            <value>
                <fullName>Île-de-France</fullName>
            </value>
            <value>
                <fullName>Provence-Alpes-Côte d&apos;Azur</fullName>
            </value>
            <value>
                <fullName>Auvergne-Rhône-Alpes</fullName>
            </value>
            <value>
                <fullName>Nouvelle-Aquitaine</fullName>
            </value>
            <value>
                <fullName>Occitanie</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Uttar Pradesh</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Guangdong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>